add <content> tag to <template> tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="import" href="x-marquee.html">
   </head>
   <body>
-    <x-marquee></x-marquee>
+    <x-marquee>x-marquee</x-marquee>
   </body>
 </html>
  
