--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>&lt;x-marquee&gt;</title>
+    <title>&lt;mar-quee&gt;</title>
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-    <link rel="import" href="x-marquee.html">
+    <link rel="import" href="mar-quee.html">
   </head>
   <body>
-    <x-marquee>x-marquee</x-marquee>
+    <mar-quee>mar-quee</mar-quee>
   </body>
 </html>
  
