--- a/mar-quee.html
+++ b/mar-quee.html
@@ -1,4 +1,4 @@
-<template id='x-marquee-template'>
+<template id='marquee-template'>
   <style>
     .ticker {
       overflow: hidden;
@@ -23,15 +23,15 @@
 </template>
 
 <script>
-  var XMarqueeProtoType = Object.create(HTMLElement.prototype);
-  XMarqueeProtoType.createdCallback = function(){
-    var link = document.querySelector('link[href="x-marquee.html"]');
-    var template = link.import.getElementById('x-marquee-template');
+  var marqueeProtoType = Object.create(HTMLElement.prototype);
+  marqueeProtoType.createdCallback = function(){
+    var link = document.querySelector('link[href="mar-quee.html"]');
+    var template = link.import.getElementById('marquee-template');
     var clone = document.importNode(template.content, true);
     var shadowRoot = this.createShadowRoot();
     shadowRoot.appendChild(clone);
   };
-  var XMarquee = document.registerElement('x-marquee',{
-    prototype: XMarqueeProtoType
+  var marquee = document.registerElement('mar-quee',{
+    prototype: marqueeProtoType
   });
 </script>
