--- a/mar-quee.html
+++ b/mar-quee.html
@@ -25,7 +25,7 @@
 <script>
   var marqueeProtoType = Object.create(HTMLElement.prototype);
   marqueeProtoType.createdCallback = function(){
-    var link = document.querySelector('link[href="mar-quee.html"]');
+    var link = document.querySelector('link[href*="mar-quee.html"]');
     var template = link.import.getElementById('marquee-template');
     var clone = document.importNode(template.content, true);
     var shadowRoot = this.createShadowRoot();
